--- a/Sc3S.csproj
+++ b/Sc3S.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Blazored.FluentValidation" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
@@ -29,6 +31,7 @@
     <Folder Include="Extensions\" />
     <Folder Include="Controllers\" />
     <Folder Include="Entities\" />
+    <Folder Include="DTO\" />
   </ItemGroup>
 
 </Project>
