--- a/Sc3S.csproj
+++ b/Sc3S.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Blazored.FluentValidation" Version="2.0.3" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -30,8 +33,7 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Entities\" />
-    <Folder Include="DTO\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
