added login with initial user

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-      "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_Sc3S;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Sc3S;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
